# PhotonBox

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  PhotonBox-Demo.sln  PhotonBox-Engine.sln  README.md  Star-Engine.sln  bRenderer.sln  deployer.bat  premake5.lua  vcpkg.json
.github/workflows/: ccpp.yml  cpp_builder.yml  cpp_releaser.yml  vcpkg.yml
Docs/: Roadmap.txt  Style.h  coding-style.txt
Game/: Game.vcxproj  Game.vcxproj.filters  config.cfg  imgui.ini
Game/src/: DLLExport.cpp  Main.cpp
PhotonBox/: PhotonBox.vcxproj  PhotonBox.vcxproj.filters  Roadmap.txt
PhotonBox-Engine/: PhotonBox-Engine.vcxproj  PhotonBox-Engine.vcxproj.filters  config.cfg
PhotonBox-Engine/res/: UIShader.fs  UIShader.vs  basicShader.fs  basicShader.vs  forward_ambientlight.fs  forward_pointlight.fs  forward_pointlight.vs  litShader.fs  litShader.vs  plane.mesh  plane_big.mtl  sphere.mesh
PhotonBox-Engine/src/: CameraController.cpp  CameraController.h  Main.cpp  PBRScene.cpp  PBRScene.h  PrinterScript.cpp  TestScene.cpp  TestScene.h  TransformerScript.cpp  glad.c
PhotonBox/lib/: INFO.txt  PhysX3Common_x64.lib  PhysX3DEBUG_x64.lib  PhysX3_x64.lib  PxTask_x64.lib  freetype.lib  zlibstat.lib
PhotonBox/src/: glad.c
PhotonBox/test/: MathTest.h
Runtime/src/: main.cpp
Star-Engine/: Star-Engine.vcxproj  Star-Engine.vcxproj.filters
Star-Engine/res/: forward_pointlight.fs  forward_pointlight.vs  shader.fs  shader.vs
StarEngine/: StarEngine.sln
StarEngine/Debug/: StarEngine.ilk
StarEngine/StarEngine/: StarEngine.vcxproj  StarEngine.vcxproj.filters
Tools/: build_increment.cpp  build_incrementer.py  build_project_linux.sh  build_project_mac.sh  build_project_win.bat  cache_cleaner.bat  cache_cleaner.py  clean_project_linux.sh  clean_project_win.bat  clear_project.bat  code_checker.bat  code_checker.py  code_checker_mac.sh  code_checker_win.bat  deployer.bat  deployer.py  deployer_linux.sh  deployer_mac.sh  deployer_win.bat  generate_project_linux.sh  generate_project_mac.sh  generate_project_win.bat  package.py  package_linux.sh  package_mac.sh  package_win.bat
bRenderer/: bRenderer.h
bRenderer/headers/: Camera.h  Configuration.h  CubeMap.h  DepthMap.h  FileHandler.h  Font.h  Framebuffer.h  Geometry.h  GeometryData.h  IDrawable.h  IRenderProject.h  IShaderData.h  Input.h  Light.h  Logger.h  Material.h  MaterialData.h  MatrixStack.h  Model.h  ModelData.h  ModelRenderer.h  OBJLoader.h  OSdetect.h  ObjectManager.h  Properties.h  RenderQueue.h  Renderer.h  Renderer_GL.h  Shader.h  ShaderDataFile.h  ShaderDataGenerator.h  ShaderSource.h  Sprite.h  TextSprite.h  Texture.h  TextureData.h  Touch.h  View.h
bRenderer/implementation/: Camera.cpp  Configuration.cpp  CubeMap.cpp  DepthMap.cpp  Font.cpp  Framebuffer.cpp  Geometry.cpp  Logger.cpp  Material.cpp  MatrixStack.cpp  Model.cpp  ModelData.cpp  ModelRenderer.cpp  OBJLoader.cpp  ObjectManager.cpp  RenderQueue.cpp  Renderer.cpp  Shader.cpp  ShaderDataFile.cpp  ShaderDataGenerator.cpp  ShaderSource.cpp  Sprite.cpp  TextSprite.cpp  Texture.cpp  TextureData.cpp
doc/: PhotonBoxUML.uxf
doc/img/: repo_banner.pdn
enc_temp_folder/63a61bac8ecbc685499ebbbd964cf620/: Component.h
enc_temp_folder/9e73e52a29ff4171acfe34a36e6429f1/: FrameBuffer.h
examples/Sandbox/: CMakeLists.txt
externalLibraries/vmmlib-library/: LICENSE.txt
include/PhotonBox/: PhotonBoxConfig.h
project/headers/: Behaviour.h  Collider.h  Component.h  Core.h  GameObject.h  Logic.h  ObjectRenderer.h  Physics.h  Scene.h  Script.h  TheRenderer.h  TheTime.h  Transform.h
project/implementation/: AsteroidRenderer.cpp  Behaviour.cpp  Collider.cpp  Component.cpp  Core.cpp  CubeRenderer.cpp  FreeCameraScript.cpp  GameObject.cpp  Logic.cpp  MoveScript.cpp  ObjectRenderer.cpp  ParticleSystem.cpp  Physics.cpp  RotationScript.cpp  Scene.cpp  ShipRenderer.cpp  ShipScript.cpp  Space.cpp  SphereCollider.cpp  TheRenderer.cpp  TheTime.cpp  Transform.cpp  main.cpp
project/resources/: additivShader.frag  additivShader.vert  asteroid.mtl  blurShader.frag  blurShader.vert  config.json  crystal.mtl  cube.mtl  cutOffShader.frag  cutOffShader.vert  guy.frag  guy.mtl  guy.vert  ship.mtl  sky.frag  sky.vert
project/windows/: windows.vcxproj  windows.vcxproj.filters
res/: logo.pdn  title.pdn
samples/Sandbox/: CMakeLists.txt
samples/Sandbox/res/Realistic-Rendering/BalconyFloor/: Balcony_Floor.mtl
samples/Sandbox/res/Realistic-Rendering/Lamp/: T_FloorLamp_AO.tga
samples/Sandbox/res/Realistic-Rendering/Occluder/: occluder.mtl
samples/Sandbox/res/Realistic-Rendering/Walls/: Room.mtl
samples/Sandbox/res/meshes/shelby/: shelby_front_lights.mtl
samples/Sandbox/res/shaders/post-processing/: TAA.fs  TAA.vs  blur.fs  cutOff.fs  dof.fs  exposure.fs  monochrom.fs  ssReflection.fs  ssReflection.vs
samples/Sandbox/src/: Main.cpp
samples/Sandbox/src/PostProcessors/: FXAAProcessor.cpp  SSAOProcessor.cpp  SSReflectionProcessor.cpp  TAAProcessor.cpp  ToneMappingProcessor.cpp
samples/Sandbox/src/Scenes/: MaterialTestScene.cpp  PhysicsScene.cpp  RealisticRenderingScene.cpp  ShelbyScene.cpp
samples/Sandbox/src/Scripts/: FollowScript.cpp  MaterialScript.cpp  TransformerScript.cpp
samples/Sandbox/src/Shader/: BlurHShader.cpp  CutOffShader.cpp  DOFShader.cpp  ExposureShader.cpp  ToneMappingShader.cpp
scripts/: cache_cleaner.py  code_checker.py  code_checker_mac.sh  generate_project_linux.sh  generate_project_mac.sh  generate_project_win.bat  package_linux.sh  package_mac.sh  package_win.bat
src/component/: AmbientLight.cpp  BoxCollider.cpp  BoxCollider_Impl.h  Camera.cpp  DirectionalLight.cpp  LightProbe.cpp  MeshRenderer.cpp  Rigidbody.cpp  (+1 more)
test/: MathTest.h
tools/: cache_cleaner.bat  cache_cleaner.py  code_checker_win.bat  generate_project_linux.sh  generate_project_mac.sh  generate_project_win.bat  install.py  install_nix.sh  install_win.bat  package.py  package_linux.sh  package_mac.sh  package_win.bat  prerequesits.py  prerequesits_nix.sh  prerequesits_win.bat  setup.py  setup_nix.sh  setup_win.bat
workbench/: CMakeLists.txt
workbench/src/: Main.cpp
(+1014 files in other folders)
